<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgound">

        <TableRow
            android:gravity="center"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:stretchColumns="2"
            android:visibility="visible">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/choose" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/basic" />

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deepches" />

                    <RadioButton
                        android:id="@+id/radio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/levin" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/choose_color" />

                <RadioGroup
                    android:id="@+id/colors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/white" />

                    <RadioButton
                        android:id="@+id/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/black" />
                </RadioGroup>
            </LinearLayout>

        </TableRow>

        <TableRow
            android:gravity="center_horizontal">

            <NumberPicker
                android:id="@+id/numberDepth"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        <Button
            android:text="@string/submit"
            android:onClick="setOptions"/>

        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>
