<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:background="@drawable/backgound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:visibility="visible"
            android:orientation="horizontal">
            <Button
                android:id="@+id/startBTN"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/start_game"
                android:onClick="OnStartGameBtnClick">
            </Button>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:visibility="visible"
            android:orientation="horizontal">
            <Button
                android:id="@+id/optionsBTN"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/options"
                android:onClick="OnOptionsBtnClick">
            </Button>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:visibility="visible"
            android:orientation="horizontal">
            <Button
                android:id="@+id/exitBTN"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/exit"
                android:onClick="OnExitBtnClick">
            </Button>
        </TableRow>



    </TableLayout>
</android.support.constraint.ConstraintLayout>
